[iOS] Only disable BVC rotation during transition animations.

The previous implementation assumed that a presented view controller's
should autorotate was not called, where the actual behavior is that
it is called for each view controller individually,  Presumably, this
clause was introduced to prevent rotation from occurring during
presentation or dismissal animations, so this CL updates the check to
specifically check for these conditions.

Bug: 794439
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Id943e71ab407d00be46f9af248e3de6a08f69649
Reviewed-on: https://chromium-review.googlesource.com/844855
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526238}
Former-commit-id: 3a449ceed13778480f3bed36186a2fc8767c1a0a